--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,15 @@
+html{
+  overflow: hidden;
+}
 body {
   font-family: 'Roboto', sans-serif; 
   direction: rtl;
   margin: 0;
   padding: 0;
+  overflow: hidden;
 }
 main {
   margin: 0;
   padding: 0;
+  overflow: hidden;
 }
